--- a/package.json
+++ b/package.json
@@ -24,15 +24,19 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^1.0.0",
+        "@shadcn/ui": "^0.0.4",
         "@tailwindcss/vite": "^4.1.1",
         "@tanstack/vue-table": "^8.21.3",
+        "@types/lodash": "^4.17.19",
         "@vee-validate/zod": "^4.15.1",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vueuse/core": "^12.8.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
+        "date-fns": "^4.1.0",
         "laravel-vite-plugin": "^1.0",
+        "lodash": "^4.17.21",
         "lucide-vue-next": "^0.468.0",
         "reka-ui": "^2.3.1",
         "sonner": "^2.0.5",
